test/zinc_source/compile_errors/error_handling/02_err_without_context.zn
// expected-error: Err\(\.\.\.\) requires an expected Result<T, E> context
fn main() {
    value = Err("boom")
    print(value)
}
